@@ -322,7 +322,7 @@ class UploadAddendumEvidenceLegalRepHomeOfficeAdminOfficerHandlerTest {
         List<IdValue<DocumentWithMetadata>> actualExistingAdditionalDocuments =
             existingAdditionalEvidenceDocumentsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingAdditionalDocuments.size());
 
